Fix minor bug with spacing

--- a/less/profile.less
+++ b/less/profile.less
@@ -4,14 +4,18 @@
 body {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
     font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
     background-color: #2C3539;
 }
 
 html {
-    width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 h1,
